--- a/charity/newsContent.html
+++ b/charity/newsContent.html
@@ -34,6 +34,7 @@
 				return null;
 			}
 			var id = GetQueryString("id");
+			var userID=GetQueryString("userID");
 			console.log(id)
 
 			var DetailUrl = "http://47.93.192.128:5001/News/NewsInfo";
@@ -75,8 +76,12 @@
 			
 			
 			
-			function reply(id,replyId){
-				window.location.href = "../news/reply.html?id=" + id+"&replyId="+replyId;
+//			function reply(id,replyId){
+//				window.location.href = "../news/reply.html?id=" + id+"&replyId="+replyId;
+//			}
+			
+			function reply(id,replyId,name,userID){
+				window.location.href = "../news/reply.html?id=" + id+"&replyId="+replyId+"&name="+name+"&userID="+userID;
 			}
 			
 			var CommentUrl = "http://47.93.192.128:5001/News/GetNewsReplyList";
@@ -97,7 +102,7 @@
 						for(var i = 0; i < data.Data.Data.length; i++) { //循环输出data中的数据
 							li = document.createElement('li');
 							li.className = 'clearfix';
-							li.setAttribute('onclick','reply(\''+id+'\',\''+data.Data.Data[i].id+'\')')
+							li.id=data.Data.Data[i].id;
 							li.innerHTML = '<div class="floatL avatar"><img src="'+
 							data.Data.Data[i].userImg+
 							'" /></div><div class="floatR commentsOthers"><p class="clearfix pName"><span class="floatL">'+
@@ -108,11 +113,16 @@
 							data.Data.Data[i].content+
 							'</p><p class="pTime"><span>'+
 							data.Data.Data[i].commentTime+
-							'</span><span class="commontsReply">  回复</span></p></div></a>'
+							'</span><span class="commontsReply" name='+i+'>  回复</span></p></div></a>'
 							fragment.appendChild(li);
 						}
 					}
 					document.querySelector(".List").appendChild(fragment); //输出到#item1mobile的页面内容
+					$(".commontsReply").click(function(){
+						var replyId=$(this).parent().parent().parent().attr("id");
+						var name=$(this).attr("name");
+						reply(id,replyId,name,userID)
+					});
 				},
 				error: function() {
 
