--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -10,15 +10,23 @@
 		<link rel="stylesheet" href="../css/mui.min.css">
 		<link rel="stylesheet" href="../css/training.css" />
 		<link rel="stylesheet" href="../css/iconfont.css" />
-		<!--<style>
-			.mui-table-view-cell:after{
-				left: 0;
+		<style>
+			.changeBig{
+				position: absolute;
+			    width: 100%;
+			    top: 27%;
+			    margin: 0 auto;
+			    left: 0;
+			    z-index: 9999;
 			}
-		</style>-->
+			.displayB{
+				display: block;
+			}
+		</style>
 	</head>
 
 	<body>
-		
+		<div id = "bgBlack" style="display:none;width:100%;height: 950px;background: #000;position: absolute;top:0;z-index: 999;"></div>
 		<div class="charityList"></div>
 		
 		<script type="text/html" id="charityList">
@@ -37,9 +45,7 @@
 				<h2>最新图文</h2>
 				<a class="goIos">更多></a>
 			</div>
-			{{each activition as value}}
-					{{include 'imgnewslist' value}}
-			{{/each}}
+			
 		</script>
 		
 		<script type="text/html" id="newslist">
@@ -54,14 +60,7 @@
 			</div>
 		</script>
 		
-		
-		<script type="text/html" id="imgnewslist">
-			<div class="charity_list_img">
-				{{each imgnewslist as value i}}
-					<a href="" id="{{value.imgnewsid}}"><img src="{{value.img}}"/></a>
-				{{/each}}
-			</div>
-		</script>
+	    <div id="imgList" class="charity_list_img"></div>
 
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/flexable.js"></script>
