--- a/daoguan/daoguan_noCertification.html
+++ b/daoguan/daoguan_noCertification.html
@@ -25,7 +25,7 @@
 	</head>
 
 	<body>
-		<div class="dg_banner"><img src="../img/daoguan_banner.jpg" alt="" /></div>
+		<div class="dg_banner"><img src="../images/daoguan_banner.jpg" alt="" /></div>
 		<div class="dg_head">
 			<h2>吴静钰跆拳道俱乐部</h2>
 			<!--<h3><span class="dh_Star" style="display: none;">★★★★★</span> 协会认证 &nbsp;&nbsp;&nbsp;&nbsp;CTA06</h3>-->
@@ -46,12 +46,12 @@
 		    <h2 class="dg_title"><span>简介详情</span></h2>
 		    <p class="dg_p">吴​​​​​​静钰跆拳道俱乐部是由​​​​​2008年北京、2012年伦敦奥运会跆拳道冠军、中国奥委会执委、全国青联委员吴静钰女士授权并参与筹划的高端青少年体育教育机构。俱乐部以全新的教学理念、高标准的教学质量和绝佳的硬件设施，遥遥领先于同行业，并致力于打造中国青少年体育教育第一连锁品牌。</p>
 			<div class=" dg_scroll">
-				<a href=""><img src="../img/daoguan_img1.jpg" alt="" /></a>
-				<a href=""><img src="../img/daoguan_img2.jpg" alt="" /></a>
-				<a href=""><img src="../img/daoguan_img3.jpg" alt="" /></a>
-				<a href=""><img src="../img/daoguan_img1.jpg" alt="" /></a>
-				<a href=""><img src="../img/daoguan_img2.jpg" alt="" /></a>
-				<a href=""><img src="../img/daoguan_img3.jpg" alt="" /></a>
+				<a href=""><img src="../images/daoguan_img1.jpg" alt="" /></a>
+				<a href=""><img src="../images/daoguan_img2.jpg" alt="" /></a>
+				<a href=""><img src="../images/daoguan_img3.jpg" alt="" /></a>
+				<a href=""><img src="../images/daoguan_img1.jpg" alt="" /></a>
+				<a href=""><img src="../images/daoguan_img2.jpg" alt="" /></a>
+				<a href=""><img src="../images/daoguan_img3.jpg" alt="" /></a>
 			</div>
 		</div>
 
