--- a/searchList/searchList.html
+++ b/searchList/searchList.html
@@ -24,7 +24,7 @@
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<ul class="searchListPage" id="List">
 					<!--<li class="mxhLi" onclick="texts(1030,11)">
-						<div class="mui-table-Img"><img src="../img/img1.png" /></div>
+						<div class="mui-table-Img"><img src="../images/img1.png" /></div>
 						<div class="mui-table-text">
 							<p class="mui-table-Tile">2017年全国大众跆拳道一级以上裁判员年审复训培训班</p>
 							<p class="mui-table-look"><span class="lookLeft">2017年5月20日 中跆协官网</span><span class="lookRight"><i class="look"></i> 5686</span></p>
@@ -39,9 +39,9 @@
 					<li class="mxhLi">
 						<div class="muipurelyTitle">中国女子跆拳道队蝉联2016世界杯女子团</div>
 						<div class="muipurelyImg" id="purelyImg">
-							<img src="../img/timg.jpg" alt="" />
-							<img src="../img/timg2.jpg" alt="" />
-							<img src="../img/timg3.jpg" alt="" />
+							<img src="../images/timg.jpg" alt="" />
+							<img src="../images/timg2.jpg" alt="" />
+							<img src="../images/timg3.jpg" alt="" />
 						</div>
 						<div class="muipurelytext ">
 							<p class="muipurelylook clearfix"><span class="lookLeft">2017年5月20日 CCTV5</span><span class="lookRight"><i class="look"></i> 1.5万</span></p>
