--- a/aboutUs/aboutUs.html
+++ b/aboutUs/aboutUs.html
@@ -20,7 +20,7 @@
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
 			border-radius: 2.16rem;
-			background: url(../img/zt.png) no-repeat center center;
+			background: url(../images/zt.png) no-repeat center center;
 			background-size:120% 120%;
 		}
 		.version{
@@ -84,90 +84,3 @@
 		</script>
 	</body>
 
-
-<!--<!doctype html>
-<html>
-
-	<head>
-		<meta charset="UTF-8">
-		<title>中国跆拳道协会简介</title>
-		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<link href="../css/common.css" rel="stylesheet" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<style>
-		.aboutUsPage{
-			background: #fff;
-		}
-		.secretLogo{
-			background: #fff;
-			width:2.14rem;
-			height:2.16rem;
-			margin:0.49rem auto 0.6rem;
-			background: url(../img/ztx.png) no-repeat center center;
-			background-size:100% 100%;
-		}
-		.version{
-			font-size:0.24rem;
-			color:#bfbfbf;
-			margin-top:0.38rem;
-			line-height:0.3rem;
-			text-align:center;
-			margin-bottom:0.3rem;
-		}
-		.aboutUsArticle{
-			padding:0 0.3rem;
-		}
-		.aboutUsArticleTil{
-			font-size:0.28rem;
-			color:#333;
-			text-align:center;
-			line-height:0.4rem;
-			
-		}
-		.aboutUsArticle p{
-			text-indent: 2em;
-			font-size:0.23rem;
-			color:#333;
-			line-height:0.5rem;
-		}
-		</style>
-	</head>
-
-	<body>
-		<div class="mui-content">
-			<div id="slider" class="mui-slider mui-fullscreen">
-				<div class="aboutUsPage">
-					<div class="secretLogo"></div>
-					<div class="version">版本信息 1.0.0</div>
-					<div class="aboutUsArticle">
-						<h3 class="aboutUsArticleTil">中国跆拳道协会简介</h3>
-						<p>中国跆拳道协会经中华人民共和国民政部正式批准，于2004年在北京成立。本协会是在中华全国体育总会领导下的群众性非营利体育社团，是中国奥委会承认的、代表中国参加相应国际跆拳道组织和活动的唯一合法组织。本协会依法对中国跆拳道进行管理，现有团体会员31个（全国各省、自治区、直辖市跆拳道协会）；个人会员正在逐步发展壮大，目前已接近百万之众</p>
-						<p>中国跆拳道协会的总部设在首都北京。</p>
-						<p>中国跆拳道协会的宗旨是：在遵守国家宪法、法律的前提下，团结中国跆拳道工作者、运动员和跆拳道爱好者；在中国推广和普及跆拳道运动，增强中华民族的身体素质；提高跆拳道运动技术水平，攀登世界跆拳道高峰；增进同各国家和地区跆拳道人士的友谊，加强与世界跆拳道联盟和亚洲跆拳道联盟等国际体育组织以及世界各国跆拳道协会的联系与合作。</p>
-						<p style="text-align: right;margin-top:1rem;">中跆协</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<script src="../js/flexable.js"></script>		
-		<script src="../js/mui.min.js"></script>
-		<script src="../js/common.js"></script>
-		<script>
-			mui.ajax("url",{
-				dataType:'json',//服务器返回json格式数据
-				type:'post',//HTTP请求类型
-				timeout:10000,//超时时间设置为10秒；
-				success:function(data){
-					/*data是后台处理好，前台是显示用的*/
-				},
-				error:function(xhr,type,errorThrown){
-					console.log(type);
-				}
-			}) 
-		</script>
-	</body>
-
-
-</html>-->
