--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -27,12 +27,56 @@
 
 	<body>
 		<div id = "bgBlack" style="display:none;width:100%;height: 950px;background: #000;position: absolute;top:0;z-index: 999;"></div>
+		<div id="slider" class="mui-slider" >
+			<div class="mui-slider-group mui-slider-loop">
+				<!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
+				<div class="mui-slider-item mui-slider-item-duplicate">
+					<a href="#">
+						<img src="../img/Charity_banner.jpg">
+					</a>
+				</div>
+				<!-- 第一张 -->
+				<div class="mui-slider-item">
+					<a href="#">
+						<img src="../img/Charity_banner.jpg">
+					</a>
+				</div>
+				<!-- 第二张 -->
+				<div class="mui-slider-item">
+					<a href="#">
+						<img src="../img/Charity_banner.jpg">
+					</a>
+				</div>
+				<!-- 第三张 -->
+				<div class="mui-slider-item">
+					<a href="#">
+						<img src="../img/Charity_banner.jpg">
+					</a>
+				</div>
+				<!-- 第四张 -->
+				<div class="mui-slider-item">
+					<a href="#">
+						<img src="../img/Charity_banner.jpg">
+					</a>
+				</div>
+				<!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
+				<div class="mui-slider-item mui-slider-item-duplicate">
+					<a href="#">
+						<img src="../images/shuijiao.jpg">
+					</a>
+				</div>
+			</div>
+			<div class="mui-slider-indicator">
+				<div class="mui-indicator mui-active"></div>
+				<div class="mui-indicator"></div>
+				<div class="mui-indicator"></div>
+				<div class="mui-indicator"></div>
+			</div>
+		</div>
 		<div class="charityList"></div>
 		
 		<script type="text/html" id="charityList">
-			<div><a><img class="charity_img" src="../img/Charity_banner.jpg"/></a></div>
-			
-				
+
 			<div class="charity_tit">
 				<h2>支教新闻</h2>
 				<a href="GetGongyiNewsList.html">更多></a>
@@ -68,5 +112,12 @@
 		<script src="../js/common.js"></script>
 		<script src="../js/charity_list.js"></script>
 		<script src="../js/artTemplate.js"></script>
+		<script type="text/javascript" charset="utf-8">
+			mui.init({
+				swipeBack:true //启用右滑关闭功能
+			});
+			var slider = mui("#slider");
+
+		</script>
 	</body>
 </html>
