--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -27,44 +27,27 @@
 
 	<body>
 		<div id = "bgBlack" style="display:none;width:100%;height: 950px;background: #000;position: absolute;top:0;z-index: 999;"></div>
-		<div id="slider" class="mui-slider" >
+		<div id="slidert" class="mui-slider" >
 			<div class="mui-slider-group mui-slider-loop">
 				<!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
 				<div class="mui-slider-item mui-slider-item-duplicate">
 					<a href="#">
-						<img src="../img/Charity_banner.jpg">
+						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
 					</a>
 				</div>
 				<!-- 第一张 -->
 				<div class="mui-slider-item">
 					<a href="#">
-						<img src="../img/Charity_banner.jpg">
+						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
 					</a>
 				</div>
 				<!-- 第二张 -->
 				<div class="mui-slider-item">
 					<a href="#">
-						<img src="../img/Charity_banner.jpg">
+						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
 					</a>
 				</div>
-				<!-- 第三张 -->
-				<div class="mui-slider-item">
-					<a href="#">
-						<img src="../img/Charity_banner.jpg">
-					</a>
-				</div>
-				<!-- 第四张 -->
-				<div class="mui-slider-item">
-					<a href="#">
-						<img src="../img/Charity_banner.jpg">
-					</a>
-				</div>
-				<!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
-				<div class="mui-slider-item mui-slider-item-duplicate">
-					<a href="#">
-						<img src="../images/shuijiao.jpg">
-					</a>
-				</div>
+				
 			</div>
 			<div class="mui-slider-indicator">
 				<div class="mui-indicator mui-active"></div>
@@ -116,7 +99,7 @@
 			mui.init({
 				swipeBack:true //启用右滑关闭功能
 			});
-			var slider = mui("#slider");
+			var slidert = mui("#slidert");
 
 		</script>
 	</body>
