认证不兼容安卓处理

--- a/attestation/attestation.html
+++ b/attestation/attestation.html
@@ -22,7 +22,7 @@
 				<input type="text" name="" id="attestationInput" value="" placeholder="请输入身份证号或会员编号"/>
 			</div>
 			
-			<div class="attestationSelectButton">
+			<div id= "attestationSelectButton" class="attestationSelectButton">
 				<div id="inquireBtn">查询</div>
 			</div>
 			<div class="attestationSelectHelp">
