--- a/charity/newsContent.html
+++ b/charity/newsContent.html
@@ -95,6 +95,7 @@
 				datatype: "json",
 				success: function(data) {
 					data = eval('(' + data + ')');
+					console.log(data);
 					var fragment = document.createDocumentFragment(); //创建一个代码片段
 					var li;
 					console.log(data)
