--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 		<meta charset="UTF-8">
 		<title>认证查询</title>
 		<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-		<link href="../css/mui.min.css" rel="stylesheet" />
-		<link href="../css/common.css" rel="stylesheet" />
-		<link href="../css/attestation.css" rel="stylesheet" />
-		<script src="../js/flexable.js"></script>
-		<script src="../js/jquery.js"></script>
+		<link href="css/mui.min.css" rel="stylesheet" />
+		<link href="css/common.css" rel="stylesheet" />
+		<link href="css/attestation.css" rel="stylesheet" />
+		<script src="js/flexable.js"></script>
+		<script src="js/jquery.js"></script>
 		<!--<script src="../js/zepto_1.1.3.js"></script>-->
 
 	</head>
@@ -22,7 +22,7 @@
 				<input type="text" name="" id="attestationInput" value="" placeholder="请输入身份证号或会员编号"/>
 			</div>
 			
-			<div class="attestationSelectButton">
+			<div id= "attestationSelectButton" class="attestationSelectButton">
 				<div id="inquireBtn">查询</div>
 			</div>
 			<div class="attestationSelectHelp">
@@ -33,8 +33,8 @@
 				<p>在级位证书编号栏中输入要查询的会员级位证书编号,级位证书编号为经中国跆拳道协会颁发的有效证书.为保障个人会员的信息安全,请在查询时,要求姓名和级位证书编号必须填写正确,点击查询即可确认中国跆拳道协会个人会员级位信息.</p>
 			</div>
 		</div>
-		<script src="../js/mui.min.js"></script>
-		<script src="../js/attestation.js"></script>
+		<script src="js/mui.min.js"></script>
+		<script src="js/attestation.js"></script>
 	</body>
 
 </html>
