隐私声明图片不显示问题

--- a/aboutUs/secret.html
+++ b/aboutUs/secret.html
@@ -20,7 +20,7 @@
 			height:2.16rem;
 			margin:0.49rem auto 0.6rem;
 			border-radius: 2.16rem;
-			background: url(../img/zt.png) no-repeat center center;
+			background: url(../images/zt.png) no-repeat center center;
 			background-size:121% 121%;
 		}
 		.secretArticleTil{
