--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -55,7 +55,11 @@
 			</ul>
 
 		</script>
-
+	
+		<script type="text/html" id="NOMsg">
+			<div>暂无会员信息</div>
+		</script>
+	
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/jquery-1.9.1.min.js"></script>
 		<script src="../js/zepto_1.1.3.js"></script>
