--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -31,7 +31,7 @@
 
 	<body>
 		<div class="identifyResult"></div>
-
+		<div class="NOMsg"></div>
 		<script type="text/html" id="identifyResult">
 
 			<div class="identifyImg">
