--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -184,7 +184,7 @@
 									data.Data.Data[i].Title +
 									'</h2><div class="mui-text-justify">内容简介：' +
 									data.Data.Data[i].tag +
-									'</div></div></div><div class="saishi_time"><p class="peixun_p">赛事时间：' +
+									'</div></div></div><div class="saishi_time"><p class="peixun_p">比赛时间：' +
 									data.Data.Data[i].MatchDate +
 									'</p><button onclick="texts(' + data.Data.Data[i].id + ')" class="mui-btn-blue border-radius">快速报名</button></div>'
 							fragment.appendChild(li);
