--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -56,6 +56,7 @@
 				<div class="mui-indicator"></div>
 			</div>
 		</div>
+		<div>赵成献</div>
 		<div class="charityList"></div>
 		
 		<script type="text/html" id="charityList">
