--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -27,36 +27,36 @@
 
 	<body>
 		<!--<div id = "bgBlack" style="display:none;width:100%;height: 950px;background: #000;position: absolute;top:0;z-index: 999;"></div>-->
-		<div>赵成献</div>
+		<!--<div>赵成献</div>
 		<div id="slidert" class="mui-slider" >
 			<div class="mui-slider-group mui-slider-loop">
 				<!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
-				<div class="mui-slider-item mui-slider-item-duplicate">
+				<!--<div class="mui-slider-item mui-slider-item-duplicate">
 					<a href="#">
 						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
 					</a>
 				</div>
 				<!-- 第一张 -->
-				<div class="mui-slider-item">
+				<!--<div class="mui-slider-item">
 					<a href="#">
 						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
 					</a>
-				</div>
+				</div>-->
 				<!-- 第二张 -->
-				<div class="mui-slider-item">
+				<!--<div class="mui-slider-item">
 					<a href="#">
 						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
 					</a>
-				</div>
+				</div>-->
 				
-			</div>
+			<!--</div>
 			<div class="mui-slider-indicator">
 				<div class="mui-indicator mui-active"></div>
 				<div class="mui-indicator"></div>
 				<div class="mui-indicator"></div>
 				<div class="mui-indicator"></div>
-			</div>
-		</div>
+			</div>-->
+		<!--</div>-->
 		<div>赵成献</div>
 		<div class="charityList"></div>
 		
