--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -189,7 +189,7 @@
 									data.Data.Data[i].tag +
 									'</div></div><div style="clear:both"></div></div><div class="saishi_time"><p class="peixun_p">比赛时间：' +
 									data.Data.Data[i].MatchDate +
-									'</p><button onclick="texts(' + data.Data.Data[i].id + ')" class="mui-btn-blue border-radius">快速报名</button></div>'
+									'</p></div>'
 							fragment.appendChild(li);
 						}
 					}
@@ -230,7 +230,9 @@
 									data.Data.Data[i].tag +
 									'</div></div></div><div class="saishi_time"><p class="peixun_p">比赛时间：' +
 									data.Data.Data[i].MatchDate +
-									'</p><button onclick="texts(' + data.Data.Data[i].id + ')" class="mui-btn-blue border-radius">快速报名</button></div>'
+									'</p></div>'
+									
+//									<button onclick="texts(' + data.Data.Data[i].id + ')" class="mui-btn-blue border-radius">快速报名</button>
 								fragment.appendChild(li);
 							}
 						}
