协会样式优化

--- a/association/association.html
+++ b/association/association.html
@@ -10,6 +10,12 @@
 		<script src="../js/flexable.js"></script>
 		<script src="../js/jquery.js"></script>
 	</head>
+	<style>
+		#association{
+	      padding: 30px 14px 50px 14px;
+			
+		}
+	</style>
 	<body>
 		
 		<div id="association"></div>
