姓名联系人姓名

--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -61,7 +61,7 @@
 				</div>
 			</div>
 			<ul id="resultUl">			
-				<li><span class="commonColor">姓名：</span><span class="commonRight">{{linkren}}</span></li>
+				<li><span class="commonColor">姓名：</span><span class="commonRight">{{name}}</span></li>
 				<li><span class="commonColor">性别：</span>
 					{{if sex == 1}}
 					   <span class="commonRight">男</span>
@@ -73,7 +73,7 @@
 				</li>
 				<li><span class="commonColor">会员编码：</span><span id="memberNumber" class="commonRight">{{userNo}}</span></li>
 				<li><span class="commonColor">验证码：</span><span id="identifyCode" class="commonRight">{{usercode}}</span></li>
-				<li><span class="commonColor">会员姓名：</span><span id="memberName" class="commonRight">{{name}}</span></li>
+				<li><span class="commonColor">联系人姓名：</span><span id="memberName" class="commonRight">{{linkren}}</span></li>
 				<li><span class="commonColor">出生日期：</span><span id="memberBirth" class="commonRight">{{birthday}}</span></li>
 				<li><span class="commonColor">起始时间：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>				
 				<li><span class="commonColor">到期时间：</span><span id="endTime" class="commonRight">{{(endTime).substring(0,10)}}</span></li>
