--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -240,7 +240,7 @@
 								}
 								li = document.createElement('li');
 								li.className = 'mui-table-view-cell mui-media';
-								if(data.Data.Data[i].pic = null){
+								if(data.Data.Data[i].pic == ""){
 									li.innerHTML = '<div class="overflow"><div onclick="texts(' + data.Data.Data[i].id + ')" style="width:100%" class="saishi_text mui-media-body"><h2 class="">' +
 									data.Data.Data[i].Title +
 									'</h2><div class="mui-text-justify">内容简介：' +
