赛事详情图片居中问题

--- a/schedule/scheduleContent.html
+++ b/schedule/scheduleContent.html
@@ -25,6 +25,9 @@
 			.mui-content-padded{
 				padding: 10px;
 			}
+			.peixun_new > p {
+           text-indent: 0px!important;
+      }
 		</style>
 	</head>
 
