协会导航滚动时固定头部

--- a/association/association.html
+++ b/association/association.html
@@ -15,6 +15,11 @@
 	      padding: 30px 14px 50px 14px;
 			
 		}
+		#segmented{
+			position: fixed;
+		    top: 0;
+		    background: #fff;
+		}
 	</style>
 	<body>
 		<div id="slider" class="mui-slider">
@@ -27,7 +32,7 @@
 		    </div>
 
 
-            <div class="mui-slider-group">
+            <div class="mui-slider-group" style="margin-top: 39px;">
                 <div id="item1mobile" class="mui-slider-item mui-control-content mui-active">
                     <ul class="mui-table-view">
                         <li class="mui-table-view-cell">
