--- a/association/association.html
+++ b/association/association.html
@@ -20,6 +20,12 @@
 		    top: 0;
 		    background: #fff;
 		}
+		.mui-segmented-control.mui-scroll-wrapper .mui-scroll{
+			width: 100%!important;
+		}
+		#segmented a{
+			font-size: .34rem;
+		}
 	</style>
 	<body>
 		<div id="slider" class="mui-slider">
