会员编码改成会员账号

--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -71,7 +71,7 @@
 					   <span class="commonRight">未知</span>
 					{{/if}}
 				</li>
-				<li><span class="commonColor">会员编码：</span><span id="memberNumber" class="commonRight">{{userNo}}</span></li>
+				<li><span class="commonColor">会员账号：</span><span id="memberNumber" class="commonRight">{{userNo}}</span></li>
 				<li><span class="commonColor">验证码：</span><span id="identifyCode" class="commonRight">{{usercode}}</span></li>
 				<li><span class="commonColor">出生日期：</span><span id="memberBirth" class="commonRight">{{birthday}}</span></li>
 				<li><span class="commonColor">起始时间：</span><span id="startTime" class="commonRight">{{(beginTime).substring(0,10)}}</span></li>				
