--- a/training/training_list.html
+++ b/training/training_list.html
@@ -130,7 +130,7 @@
 		<div class="mui-content">
 			<div id="slider" class="mui-slider mui-fullscreen">
 				<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
-					<div id="cur" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+					<div id="cur" class="mui-slider-indicator mui-segmented-control mui-segmented-control-inverted" style="border-bottom: 1px solid #CCCCCC;">
 						<!--<a class="mui-control-item mui-active" href="#item1mobile">省级</a>
 						<a class="mui-control-item" href="javascript:getJosn(22)">国家级</a>
 						<a class="mui-control-item" href="#item3mobile">国际级</a> -->
