--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -39,10 +39,12 @@
 		    background: #5a9af8;
 		    color: #fff;
 		}
+		
 	</style>
 
 	<body>
 		<div class="identifyResult"></div>
+		<div id="loadingdiv"><img id="loadingP" src="../images/timg.gif"/></div>
 		<ul id="certInfor" class="certInfor" style="padding-bottom: 150px;">
 			
 		</ul>
