--- a/attestation/identifyresult.html
+++ b/attestation/identifyresult.html
@@ -39,7 +39,13 @@
 		    background: #5a9af8;
 		    color: #fff;
 		}
-		
+		#loadingP{
+			width: 40px;
+		}
+		#loadingdiv{	
+		  margin-top: 50%;
+		  text-align: center;
+		}
 	</style>
 
 	<body>
