--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -149,7 +149,7 @@
 					<!--<div id="sliderProgressBar" class="mui-slider-progress-bar mui-col-xs-4"></div>-->
 					<!--<div id="locationW" class="current-position">地区<i></i></div>-->
 					<div id="firsrTypeDisplay">
-						<div onClick=locationW()  style="text-align:center;margin-bottom:10px;color:#888;background: #e6e6e6;">请选择城市<span id="cityResult" class="ui-alert">你妹</span></div>
+						<div onClick=locationW()  style="text-align:center;margin-bottom:10px;color:#888;background: #e6e6e6;">请选择城市<span id="cityResult" class="ui-alert"></span></div>
 						<div id="locaData"></div>
 				    </div>
 				</div>
