--- a/training/trainingContent.html
+++ b/training/trainingContent.html
@@ -67,6 +67,7 @@
 				return null;
 			}
 			var id = GetQueryString("id");
+			console.log(id)
 			var TRAIN="train";
 			function btnOpen(id,type) {
 				window.location.href = "segue://id=" + id+"&type="+TRAIN;
@@ -82,7 +83,6 @@
 				},
 				datatype: "json",
 				success: function(data) {
-					console.log(data)
 					data = eval('(' + data + ')');
 					console.log(data)
 					var con_h2=data.Data.Data.Title;
@@ -102,7 +102,7 @@
 					})
 				},
 				error: function() {
-
+					
 				}
 			});
 		</script>
