赛事进详情

--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -258,7 +258,8 @@
                 	document.getElementById('List').style.marginTop = "40px"
                 }else{
                 	document.getElementById('firsrTypeDisplay').style.display = 'none'
-                	document.getElementById('List').style.marginTop = "0px"
+                	document.getElementById('List').style.marginTop = "0px";
+                	document.getElementById('List').style.display = "block"
                 }
 				$.ajax({
 					type: "post",
