--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -31,7 +31,9 @@
 			<li class="mui-table-view-cell mui-media" id="{{value.Id}}">
 						<img class="mui-media-object mui-pull-left" src="{{value.pic}}">
 						<div class="mui-media-body">
-							<h4 class='mui-ellipsis'>{{value.title}}</h4>
+							<h4 class='mui-ellipsis'>
+							<a href="membersCont.html">{{value.title}}</a>	</h4>
+							
 							<p class='mui-ellipsis'>活动时间：{{value.activity_time}}至{{value.activity_Endtime}}</p>
 						</div>
 				</li>
