--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -32,7 +32,7 @@
 						<img class="mui-media-object mui-pull-left" src="{{value.pic}}">
 						<div class="mui-media-body">
 							<h4 class='mui-ellipsis'>
-							<a href="membersCont.html">{{value.title}}</a>	</h4>
+							{{value.title}}</h4>
 							
 							<p class='mui-ellipsis'>活动时间：{{value.activity_time}}至{{value.activity_Endtime}}</p>
 						</div>
