--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -25,8 +25,9 @@
 		<div class="dg_record">
 			<ul class="mui-table-view mui-table-view-member"></ul>
 		</div>
-		
-		<script type="text/html" id="memberRecord">
+		<div id="daoList"></div>
+		<!--<script type="text/html" id="memberRecord">
+			
 			{{each activition as value}}
 			<li class="mui-table-view-cell mui-media" id="{{value.Id}}">
 						<img class="mui-media-object mui-pull-left" src="{{value.pic}}">
@@ -38,7 +39,8 @@
 						</div>
 				</li>
 			{{/each}}	
-		</script>
+		
+		</script>-->
 		<script src="../js/mui.min.js"></script>
 		<script src="../js/flexable.js"></script>
 		<script src="../js/zepto_1.1.3.js"></script>
