--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -11,8 +11,26 @@
 		<link rel="stylesheet" href="../css/training.css" />
 		<link rel="stylesheet" href="../css/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="../css/app.css"/>
-		
+		<script src="../js/mui.min.js"></script>
 		<script src="../js/flexable.js"></script>
+		<script src="../js/zepto_1.1.3.js"></script>
+		<script src="../js/common.js"></script>
+		
+		<script>
+			function GetQueryString(name) {
+				var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+				var r = window.location.search.substr(1).match(reg);
+				if(r != null) return unescape(r[2]);
+				return null;
+		    }
+		
+		    var user_Id = GetQueryString("user_Id");
+		
+			function goDatail(id){
+				window.location.href= "membersCont.html?id=" + id;
+				alert('5555')
+			}  
+		</script>
 		<style>
 			body{
 				background: #f1f1f1;
@@ -25,43 +43,15 @@
 		<div class="dg_record">
 			<ul class="mui-table-view mui-table-view-member"></ul>
 		</div>
-		<div id="daoList"></div>
-		<!--<script type="text/html" id="memberRecord">
-			
-			{{each activition as value}}
-			<li class="mui-table-view-cell mui-media" id="{{value.Id}}">
-						<img class="mui-media-object mui-pull-left" src="{{value.pic}}">
-						<div class="mui-media-body">
-							<h4 class='mui-ellipsis'>
-							{{value.title}}</h4>
-							
-							<p class='mui-ellipsis'>活动时间：{{value.activity_time}}至{{value.activity_Endtime}}</p>
-						</div>
-				</li>
-			{{/each}}	
 		
-		</script>-->
-		<script src="../js/mui.min.js"></script>
-		<script src="../js/flexable.js"></script>
-		<script src="../js/zepto_1.1.3.js"></script>
-		<script src="../js/common.js"></script>
-		<script src="../js/members_Record.js"></script>
-		<script src="../js/artTemplate.js"></script>
-		<script>
-			function GetQueryString(name) {
-	var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
-	var r = window.location.search.substr(1).match(reg);
-	if(r != null) return unescape(r[2]);
-	return null;
-}
-
-var user_Id = GetQueryString("user_Id");
-
-function goDatail(id){
-	window.location.href= "membersCont.html?id=" + id;
-}
+		<div id="daoList"></div>
+		
+		
+		
+	<script>
+		
 $(document).ready(function() {
-	       
+	
 	var url = 'http://47.93.192.128:5001/Daoguan/Activity_Record';
 	$.ajax({
 		url: url,
@@ -119,7 +109,6 @@ $(document).ready(function() {
 	});
 });
 		
-		</script>
-		
+	</script>
 	</body>
 </html>
