--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -12,9 +12,11 @@
 		<link rel="stylesheet" href="../css/iconfont.css" />
 		<link rel="stylesheet" type="text/css" href="../css/app.css"/>
 		<script src="../js/mui.min.js"></script>
+		<script src="../js/jquery-1.9.1.min.js"></script>
 		<script src="../js/flexable.js"></script>
+		<!--<script src="../js/flexable.js"></script>
 		<script src="../js/zepto_1.1.3.js"></script>
-		<script src="../js/common.js"></script>
+		<script src="../js/common.js"></script>-->
 		
 		<script>
 			function GetQueryString(name) {
