--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -30,11 +30,8 @@
 		    var user_Id = GetQueryString("user_Id");
 		
 			function goDatail(id){
-//				window.location.href= "membersCont.html?id=" + id;
-				mui.openWindow({
-					url:'membersCont.html',
-					id:'membersCont'
-				})
+				window.location.href= "membersCont.html?id=" + id;
+				
 			}  
 		</script>
 		<style>
