--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -82,7 +82,7 @@ $(document).ready(function() {
 				     '<div class="mui-media-body" onclick="goDatail(' +activition[i].Id + ')">'+
 				     '<h4 class="mui-ellipsis">'+activition[i].title+
 				     '</h4>'+
-				     '<p class="mui-ellipsis">活动时间：'+activition[i].activity_time+'至'+activition[i].activity_Endtime+
+				     '<p class="mui-ellipsis">'+activition[i].activity_time+'至'+activition[i].activity_Endtime+
 				     '</p></div>'				     
 				   
 				   fragment.appendChild(li);
