--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -30,6 +30,7 @@
 		    var user_Id = GetQueryString("user_Id");
 		
 			function goDatail(id){
+				alert('ceshi')
 				window.location.href= "membersCont.html?id=" + id;
 				
 			}  
