--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -48,7 +48,7 @@
 		
 			function goDatail(id){
 				alert('ceshi')
-				window.location.href= "membersCont.html?id=" + id;
+				window.location.href= "https://www.baidu.com/";
 				
 			}  
 $(document).ready(function() {
