--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -49,7 +49,7 @@
 		
 			function goDatail(id){
 				alert('ceshi')
-				window.location.href= "membersCont.html?id=" + id;
+				window.location.href= "http://47.93.192.128:5001/FrontEnd/members/membersCont.html?id=" + id;
 				
 			}  
 
