--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -50,6 +50,7 @@
 			function goDatail(id){
 				alert('ceshi')
 				window.location.href= "http://47.93.192.128:5001/FrontEnd/members/membersCont.html?id=" + id;
+				alert('ni')
 				
 			}  
 
