--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -49,7 +49,10 @@
 		
 			function goDatail(id){
 				alert('ceshi')
-				window.location.href= "http://47.93.192.128:5001/FrontEnd/members/membersCont.html?id=" + id;
+				mui.openWindow({
+					url:'http://www.shen-td.com/',
+					id:'http://www.shen-td.com/'
+				})
 				alert('ni')
 				
 			}  
