--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -46,7 +46,10 @@
 		    }
 		
 		    var user_Id = GetQueryString("user_Id");
-		    function goDatail(id){
+		mui.plusReady(function () {
+		
+		
+			function goDatail(id){
 				alert('ceshi')
 				mui.openWindow({
 					url:'http://www.shen-td.com/',
@@ -55,10 +58,6 @@
 				alert('ni')
 				
 			}  
-		mui.ready(function () {
-		
-		
-			
       
 	  
 	var url = 'http://47.93.192.128:5001/Daoguan/Activity_Record';
