--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -46,20 +46,15 @@
 		    }
 		
 		    var user_Id = GetQueryString("user_Id");
-		mui.plusReady(function () {
-		
 		
 			function goDatail(id){
 				alert('ceshi')
-				mui.openWindow({
-					url:'http://www.shen-td.com/',
-					id:'http://www.shen-td.com/'
-				})
+				window.location.href= "http://47.93.192.128:5001/FrontEnd/members/membersCont.html?id=4"
 				alert('ni')
 				
 			}  
-      
-	  
+
+	
 	var url = 'http://47.93.192.128:5001/Daoguan/Activity_Record';
 	$.ajax({
 		url: url,
@@ -117,7 +112,7 @@
 			
 		}
 	});
-	})
+	
 	</script>
 	</body>
 </html>
