--- a/charity/newsContent.html
+++ b/charity/newsContent.html
@@ -36,8 +36,8 @@
 			var id = GetQueryString("id");
 			var userID=GetQueryString("userID");
 			console.log(id)
-
-			var DetailUrl = "http://47.93.192.128:5001/News/NewsInfo";
+			var urlPath="ttp://47.93.192.128:5001/";
+			var DetailUrl = urlPath+"News/NewsInfo";
 			//默认加载
 			$.ajax({
 				type: "post",
@@ -84,7 +84,7 @@
 				window.location.href = "../news/reply.html?id=" + id+"&replyId="+replyId+"&name="+name+"&userID="+userID;
 			}
 			
-			var CommentUrl = "http://47.93.192.128:5001/News/GetNewsReplyList";
+			var CommentUrl = urlPath+"News/GetNewsReplyList";
 			//默认加载
 			$.ajax({
 				type: "post",
@@ -128,7 +128,7 @@
 						var commentId=Acitve.parent().parent().parent().parent().attr("id");
 						$.ajax({
 							type:"post",
-							url:"http://47.93.192.128:5001/ThumbsUp/isThumbsUp",
+							url:urlPath+"ThumbsUp/isThumbsUp",
 							async:true,
 							dataType:"json",
 							data:{
@@ -140,7 +140,7 @@
 							if(IsThumbsUp==true){
 								$.ajax({
 									type:"post",
-									url:"http://47.93.192.128:5001/ThumbsUp/Thumbs_Down",
+									url:urlPath+"ThumbsUp/Thumbs_Down",
 									async:true,
 									data:{
 										commentId:commentId,
@@ -154,7 +154,7 @@
 							}else if(IsThumbsUp==false){
 								$.ajax({
 									type:"post",
-									url:"http://47.93.192.128:5001/ThumbsUp/Thumbs_Up",
+									url:urlPath+"ThumbsUp/Thumbs_Up",
 									async:true,
 									data:{
 										commentId:commentId,
