--- a/association/association.html
+++ b/association/association.html
@@ -66,7 +66,8 @@
 		<script src="../js/mui.min.js"></script>
 		<script>
 			mui.init()
-			var url = "http://47.93.192.128:5001/Home/AboutUs";
+			var urlPath="http://47.93.192.128:5001/";
+			var url = urlPath+"Home/AboutUs";
 			$.ajax({
 				type: "post",
 				url: url,
