--- a/charity/newsContent.html
+++ b/charity/newsContent.html
@@ -36,7 +36,7 @@
 			var id = GetQueryString("id");
 			var userID=GetQueryString("userID");
 			console.log(id)
-			var urlPath="ttp://47.93.192.128:5001/";
+			var urlPath="http://47.93.192.128:5001/";
 			var DetailUrl = urlPath+"News/NewsInfo";
 			//默认加载
 			$.ajax({
