--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -48,9 +48,9 @@
 		    var user_Id = GetQueryString("user_Id");
 		
 			function goDatail(id){
-				alert('ceshi')
+				alert(window.location.href)
 				window.location.href= "membersCont.html?id=" + id;
-				alert('cesh')
+				alert(window.location.href)
 				
 			}  
 
