--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -49,8 +49,10 @@
 		
 			function goDatail(id){
 				alert(window.location.href)
-				window.location.href= "membersCont.html?id=" + id;
+				//window.location.href= "membersCont.html?id=" + id;
+			    window.location.href = "trainingContent.html?id=" + id;
 				alert(window.location.href)
+				//return false;
 				
 			}  
 
