--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -37,7 +37,7 @@
 		
 		
 	<script>
-		mui.init()
+		//mui.init()
 		function GetQueryString(name) {
 				var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
 				var r = window.location.search.substr(1).match(reg);
