--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -50,8 +50,8 @@
 			function goDatail(id){
 				alert(window.location.href)
 				//window.location.href= "membersCont.html?id=" + id;
-			    window.location.href = "trainingContent.html?id=" + id;
-				alert(window.location.href)
+			    var cehi= window.location.href = "trainingContent.html?id=" + id;
+				alert(cehi)
 				//return false;
 				
 			}  
