--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -50,7 +50,7 @@
 			function goDatail(id){
 				alert(window.location.href)
 				//window.location.href= "membersCont.html?id=" + id;
-			    var cehi= window.location.href = "trainingContent.html?id=" + id;
+			    var cehi= window.location.href = "membersCont.html?id=" + id;
 				alert(cehi)
 				//return false;
 				
