--- a/training/training_list.html
+++ b/training/training_list.html
@@ -178,7 +178,9 @@
 
 		<script>
 			function texts(id) {
-				window.location.href = "trainingContent.html?id=" + id;
+				alert(window.location.href)
+				var nima = window.location.href = "trainingContent.html?id=" + id;
+				alert(nima)
 			}
 			(function() {
 				var t = setTimeout(function() {
