--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -56,7 +56,7 @@
 				
 			}  
 
-	
+	window.onload = function() {
 	var url = 'http://47.93.192.128:5001/Daoguan/Activity_Record';
 	$.ajax({
 		url: url,
@@ -114,7 +114,7 @@
 			
 		}
 	});
-	
+}
 	</script>
 	</body>
 </html>
