--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -354,7 +354,7 @@
 						}
 
 						document.querySelector("#cur").appendChild(fragment); //输出到#item1mobile的页面内容
-						$("#cur>a:first-child").addClass("mui-active")
+						$("#cur>span:first-child").addClass("mui-active")
 						$("#cur>a").bind("click", function() {
 							$("#cur>a").removeClass("mui-active");
 							$(this).addClass("mui-active")
