--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -38,8 +38,12 @@
 	<script src="../js/mui.min.js"></script>	
 	<script>
 		function goDatail(id){				
-			    window.location.href = "membersCont.html?id=" + id;			
-			}  
+//			    window.location.href = "membersCont.html?id=" + id;	
+          mui.openWindow({
+          	url:'membersCont.html',
+          	id:'membersCont.html'
+          })
+		}  
 		function GetQueryString(name) {
 				var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
 				var r = window.location.search.substr(1).match(reg);
