--- a/members/members_Record.html
+++ b/members/members_Record.html
@@ -39,6 +39,7 @@
 	<script>
 		function goDatail(id){				
 //			    window.location.href = "membersCont.html?id=" + id;	
+         document.getElementById('daoList').style.display = "none"
           mui.openWindow({
           	url:'membersCont.html',
           	id:'membersCont.html'
