解决了道观记录没有办法点击的问题

--- a/members/membersCont.html
+++ b/members/membersCont.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
@@ -73,4 +73,4 @@
 		<script type="text/javascript" src="../js/artTemplate.js" ></script>
 		
 	</body>
-</html>
+</html>-->
