--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -57,8 +57,8 @@
 			</div>
 		</div>
 		<div class="charityList"></div>
-		
-		<script type="text/html" id="charityList">
+		<div>这是测试</div>
+		<!--<script type="text/html" id="charityList">
 
 			<div class="charity_tit">
 				<h2>支教新闻</h2>
@@ -85,7 +85,7 @@
 					 {{/each}}
 		 		</ul>
 			</div>
-		</script>
+		</script>-->
 		
 	    <div id="imgList" class="charity_list_img"></div>
 
@@ -93,7 +93,7 @@
 		<script src="../js/flexable.js"></script>
 		<script src="../js/zepto_1.1.3.js"></script>
 		<script src="../js/common.js"></script>
-		<script src="../js/charity_list.js"></script>
+		<!--<script src="../js/charity_list.js"></script>-->
 		<script src="../js/artTemplate.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
