--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="100%">
 	<head>
 		<meta charset="utf-8">
 		<title>公益页</title>
@@ -56,7 +56,15 @@
 				<div class="mui-indicator"></div>
 			</div>
 		</div>
-		<div class="charityList"></div>
+		<!--<div class="charityList"></div>-->
+		<div>这是测试</div>
+		<div>这是测试</div>
+		<div>这是测试</div>
+		
+		<div>这是测试</div>
+		<div>这是测试</div>
+		
+		
 		<div>这是测试</div>
 		<!--<script type="text/html" id="charityList">
 
