--- a/charity/charity_list.html
+++ b/charity/charity_list.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="100%">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<title>公益页</title>
@@ -26,19 +26,39 @@
 	</head>
 
 	<body>
+		<div id = "bgBlack" style="display:none;width:100%;height: 950px;background: #000;position: absolute;top:0;z-index: 999;"></div>
+		<div id="slidert" class="mui-slider" >
+			<div class="mui-slider-group mui-slider-loop">
+				<!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
+				<div class="mui-slider-item mui-slider-item-duplicate">
+					<a href="#">
+						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
+					</a>
+				</div>
+				<!-- 第一张 -->
+				<div class="mui-slider-item">
+					<a href="#">
+						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
+					</a>
+				</div>
+				<!-- 第二张 -->
+				<div class="mui-slider-item">
+					<a href="#">
+						<img src="http://47.93.192.128:5001/ImgUpload/20170717/20170717171036286079.jpg">
+					</a>
+				</div>
+				
+			</div>
+			<div class="mui-slider-indicator">
+				<div class="mui-indicator mui-active"></div>
+				<div class="mui-indicator"></div>
+				<div class="mui-indicator"></div>
+				<div class="mui-indicator"></div>
+			</div>
+		</div>
+		<div class="charityList"></div>
 		
-
-		<!--<div class="charityList"></div>-->
-		<div>这是测试</div>
-		<div>这是测试</div>
-		<div>这是测试</div>
-		
-		<div>这是测试</div>
-		<div>这是测试</div>
-		
-		
-		<div>这是测试</div>
-		<!--<script type="text/html" id="charityList">
+		<script type="text/html" id="charityList">
 
 			<div class="charity_tit">
 				<h2>支教新闻</h2>
@@ -65,7 +85,7 @@
 					 {{/each}}
 		 		</ul>
 			</div>
-		</script>-->
+		</script>
 		
 	    <div id="imgList" class="charity_list_img"></div>
 
@@ -73,7 +93,7 @@
 		<script src="../js/flexable.js"></script>
 		<script src="../js/zepto_1.1.3.js"></script>
 		<script src="../js/common.js"></script>
-		<!--<script src="../js/charity_list.js"></script>-->
+		<script src="../js/charity_list.js"></script>
 		<script src="../js/artTemplate.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			mui.init({
