--- a/schedule/schedule_list.html
+++ b/schedule/schedule_list.html
@@ -320,7 +320,7 @@
 						}
 
 						$('#List li').remove();
-						document.querySelector("#List").appendChild(fragment); //输出到#item1mobile的页面内容
+						document.querySelector("#item1mobile").appendChild(fragment); //输出到#item1mobile的页面内容
 
 					},
 					error: function() {
